crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__for_partial_header.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun demo(items: List<String>) { for (item in items print(item) }

formatted:
fun demo(items: List<String>) {
  for (item in items print (item) 
}

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(63), end: TextSize(64) }) message=expected ')' after for header
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(63), end: TextSize(64) }) message=expected expression
