crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__function_type_parameter_declaration_boundary.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
val f: (
class C

formatted:
val f: (
  class C


diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(9), end: TextSize(14) }) message=expected type
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(9), end: TextSize(14) }) message=expected function type parameter
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(15), end: TextSize(16) }) message=expected ',' between function type parameters
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(17), end: TextSize(17) }) message=expected ')' in type
