crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__import_suffixes.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
import sample.deep.*
import sample.Name as Alias

formatted:
import sample.Name as Alias
import sample.deep.*

diagnostics:
(none)
