crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__lambda_parameter_list.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun demo() { { first, /* orphan */ , second -> first } }

formatted:
fun demo() {
  { first, /* orphan */ , second -> first }
}

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(37), end: TextSize(43) }) message=expected lambda parameter between commas
